   ActivateGame() that is called whenever LuaMenu is on with a game loaded.
   AllowDraw() if it returns false, the next draw call is skipped (only active when a game isn't running)
 - Add Spring.{Set,Get}VideoCapturingMode() - this doesn't actually record the game in any way,
   it just regulates the framerate and interpolations.
 - Add DrawScreenPost(vsx, vsy) unsynced callin. It's used to alter content of the frame after it's been completely rendered (i.e. World, MiniMap, Menu, UI).   
   Basically the frame you would get if you /screenshot it. Use it similarly to DrawScreenEffects (by ivand)

UI:
 - Add FPSClampPos config for whether the engine should verify the camera doesn't hit ground/go too far
   this and other FPS camera configs can be changed midgame and will affect the next frame drawn.

-- 103.0 --------------------------------------------------------
General:
 - Fix & Improve performace
 - Add 'allowTake' modoption (default: true) to enable/disable /take (by lamer)
 - Add onlyLocal boolean value to modinfo.lua (default false)
   If true, spring won't listen for incoming connections when running
   this game unless GAME\OnlyLocal is specified in the start script.

Sim:
 - Add new UnitDef tag "buildingMask" and LuaSyncedCtrl function "SetSquareBuildingMask". (by ivand)
   Both used in conjunction to allow/disallow construction of certain unit types (via setting buildingMask)
   on certain tiles (via SetSquareBuildingMask). By default all tiles and buildings have mask of 1

Rendering:
 - Ghosted buildings are now consistent when changing specTeam/specFullView


Bugfixes:
 - Fix #5301 Units with restricted firearcs do not turn to aim
 - Fix #5302 extreme slowdown

-- 102.0 --------------------------------------------------------
General:
 - Fix & Improve LoS performance
 ! remove LuaModUICtrl config setting
 ! remove ClassicGroundMoveType
 ! remove SpringLobby from spring installer
 - update model matrices on demand instead of once per frame

Sim: