@@ -11,6 +11,7 @@
 #include "LuaConstCMDTYPE.h"
 #include "LuaConstEngine.h"
 #include "LuaConstGame.h"
+#include "LuaConstSystem.h"
 #include "LuaInterCall.h"
 #include "LuaUnsyncedRead.h"
 #include "LuaScream.h"
@@ -111,6 +112,7 @@ CLuaIntro::CLuaIntro()
 	    !AddEntriesToTable(L, "gl",          LuaOpenGL::PushEntries)            ||
 	    !AddEntriesToTable(L, "GL",          LuaConstGL::PushEntries)           ||
 	    !AddEntriesToTable(L, "Engine",      LuaConstEngine::PushEntries)       ||
+		!AddEntriesToTable(L, "System",      LuaConstSystem::PushEntries)       ||
 	    !AddEntriesToTable(L, "Game",        LuaConstGame::PushEntries)         ||
 	    !AddEntriesToTable(L, "CMD",         LuaConstCMD::PushEntries)          ||
 	    !AddEntriesToTable(L, "CMDTYPE",     LuaConstCMDTYPE::PushEntries)      ||
