@@ -7,6 +7,7 @@
 #include "LuaCallInCheck.h"
 #include "LuaConstEngine.h"
 #include "LuaConstGL.h"
+#include "LuaConstSystem.h"
 #include "LuaIO.h"
 #include "LuaOpenGL.h"
 #include "LuaScream.h"
@@ -105,6 +106,7 @@ CLuaMenu::CLuaMenu()
 		!AddEntriesToTable(L, "Spring",    LoadUnsyncedReadFunctions)      ||
 		!AddEntriesToTable(L, "Spring",    LoadLuaMenuFunctions)           ||
 		!AddEntriesToTable(L, "Engine",    LuaConstEngine::PushEntries)    ||
+		!AddEntriesToTable(L, "System",    LuaConstSystem::PushEntries)    ||
 
 		!AddEntriesToTable(L, "Script",    LuaScream::PushEntries)         ||
 		!AddEntriesToTable(L, "VFS",       LuaVFS::PushUnsynced)           ||
@@ -380,4 +382,3 @@ int CLuaMenu::SendLuaUIMsg(lua_State* L)
 
 	return 0;
 }
-
