@@ -10,6 +10,7 @@
 #include "LuaConstCMD.h"
 #include "LuaConstCMDTYPE.h"
 #include "LuaConstEngine.h"
+#include "LuaConstSystem.h"
 #include "LuaConstGame.h"
 #include "LuaSyncedRead.h"
 #include "LuaInterCall.h"
@@ -184,6 +185,7 @@ CLuaUI::CLuaUI()
 	    !AddEntriesToTable(L, "gl",          LuaOpenGL::PushEntries)            ||
 	    !AddEntriesToTable(L, "GL",          LuaConstGL::PushEntries)           ||
 	    !AddEntriesToTable(L, "Engine",      LuaConstEngine::PushEntries)       ||
+		!AddEntriesToTable(L, "System",      LuaConstSystem::PushEntries)       ||
 	    !AddEntriesToTable(L, "Game",        LuaConstGame::PushEntries)         ||
 	    !AddEntriesToTable(L, "CMD",         LuaConstCMD::PushEntries)          ||
 	    !AddEntriesToTable(L, "CMDTYPE",     LuaConstCMDTYPE::PushEntries)      ||
