@@ -31,8 +31,15 @@ Lua:
    AllowDraw() if it returns false, the next draw call is skipped (only active when a game isn't running)
  - Add Spring.{Set,Get}VideoCapturingMode() - this doesn't actually record the game in any way,
    it just regulates the framerate and interpolations.
- - Add DrawScreenPost(vsx, vsy) unsynced callin. It's used to alter content of the frame after it's been completely rendered (i.e. World, MiniMap, Menu, UI).   
+ - Add DrawScreenPost(vsx, vsy) unsynced callin. It's used to alter content of the frame after it's been completely rendered (i.e. World, MiniMap, Menu, UI).
    Basically the frame you would get if you /screenshot it. Use it similarly to DrawScreenEffects (by ivand)
+ - Add LuaConstSystem that exposes the System table with following keys:
+    System.gpu: string, full GPU device name
+    System.gpuVendor: string, one of "Nvidia", "Intel", "ATI", "Mesa", "Unknown"
+    System.gpuMemorySize: number, size of total GPU memory in MBs; only available for "Nvidia", (rest are 0)
+    System.os: string, full name of the OS
+    System.osFamily: string, one of "Windows", "Linux", "MacOSX", "FreeBSD", "Unknown"
+    System.osWordSize: int, usually 32 or 64 for 32bit and 64bit OS
 
 UI:
  - Add FPSClampPos config for whether the engine should verify the camera doesn't hit ground/go too far
